fix: update image path to fix bug of not showing on github page

--- a/CalorieCounter/assets/css/styles.css
+++ b/CalorieCounter/assets/css/styles.css
@@ -5,7 +5,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url(/assets/images/background.jpg);
+  background-image: url(../images/background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 
